Hopefully this fixes the active tab css layout problem in IE9/10

--- a/public/sass/ext-all-spelled.scss
+++ b/public/sass/ext-all-spelled.scss
@@ -99,7 +99,6 @@ $tab-height: 25px;
 
 $tab-base-color: $color1;
 $tab-color: #fff;
-$tab-background-gradient: null;
 $tab-base-color-over: darken($color1, 10);
 $tab-base-color-active: $color2;
 $tab-color-active: #fff;
